--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-esto es una prueba
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>inicio pfae</title>
+    <link rel="stylesheet" href="estilo.css">
+</head>
+<body>
+    <h1>PFAE</h1>
+
+    <h2>Programas de Formación <br> en Alternancia con el <br> Empleo del Ayto de Tías</h2>
+    
+    <div class="pfaes">
+
+        <div class="web"> 
+            <a href="#" target="_blank">
+                <img src="imagenes/web.jpg" width="100%" height="284px" alt="Pfae_web">
+            </a> 
+        </div>
+
+        <div class="playa"> 
+            <a href="#" target="_blank"><img src="imagenes/socorismo.jpg" width="100%" height="284px" alt="Pfae_socorrismo"></a></div>
+        <div class="futuro"> <a href="#" target="_blank"><img src="imagenes/casco.jpg" width="100%" height="284px" alt="Pfae_construccion"></a></div>
+
+    </div>
+
+    <div class="logos">
+
+        <div class="canarias"> <img src="imagenes/logoGobiernoCanarias.jpg" alt="gobierno_de_canarias"> </div>
+        <div class="espana"> <img src="imagenes/images.png" alt="gobierno_de_españa"> </div>
+        <div class="juvenil"> <img src="imagenes/logo-gj-sepe-2-lin-320.jpg" alt="garantia_juvenil"> </div>
+        <div class="tias"> <img src="imagenes/logo_ayto2.png" alt="ayuntamiento_de_tías"></div>
+        <div class="europa"> <img src="imagenes/fse_cuatricro_ue.izqu_.jpg" width="100%" alt="union_europea"></div>
+
+    </div>
+</body>
+</html>
